CRC not working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ categories = ["command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+byteorder = "1.4.3"
